--- a/index.html
+++ b/index.html
@@ -2,12 +2,82 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<meta charset="UTF-8">
 	<title>Final Proyect AEW</title>
 </head>
 <body>
-	
 
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		    <a class="navbar-brand" href="#">BIKERS</a>
+			    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+			      <span class="navbar-toggler-icon"></span>
+			    </button>
+
+		    <div class="collapse navbar-collapse" id="navbarColor01">
+			      <ul class="navbar-nav mr-auto">
+			        <li class="nav-item active">
+			          <a class="nav-link" href="#">Motos <span class="sr-only">(current)</span></a>
+			        </li>
+			        <li class="nav-item">
+			          <a class="nav-link" href="#">Bicicletas</a>
+			        </li>
+			        <li class="nav-item">
+			          <a class="nav-link" href="#">Accesorios</a>
+			        </li>
+			        <li class="nav-item">
+			          <a class="nav-link" href="#">Repuestos</a>
+			        </li>
+			      </ul>
+		      <form class="form-inline">
+		        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+		        <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+		      </form>
+		    </div>
+		  </nav>
+
+		<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+	    <ol class="carousel-indicators">
+	      <li data-target="#carouselExampleCaptions" data-slide-to="0" class=""></li>
+	      <li data-target="#carouselExampleCaptions" data-slide-to="1" class="active"></li>
+	      <li data-target="#carouselExampleCaptions" data-slide-to="2" class=""></li>
+	    </ol>
+	    <div class="carousel-inner">
+		      <div class="carousel-item">
+			        <img class="d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=First slide" alt="First slide [800x400]" src="img/harley_davidson_electrica.jpg" width="700px" height="500px" data-holder-rendered="true">
+			        <div class="carousel-caption d-none d-md-block">
+				          <h4>Harley Davidson Electrica</h4>
+				          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+		        	</div>
+		      </div>
+		      <div class="carousel-item active">
+			        <img class="d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=666&amp;fg=444&amp;text=Second slide" alt="Second slide [800x400]" src="img/kawasaki zx 10r.jpg" width="700px" height="500px" data-holder-rendered="true">
+			        <div class="carousel-caption d-none d-md-block">
+				          <h4>Kawasaki ZX 10R</h4>
+				          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			        </div>
+		      </div>
+		      <div class="carousel-item">
+			        <img class="d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=555&amp;fg=333&amp;text=Third slide" alt="Third slide [800x400]" src="img/mv agusta f4.jpg" width="700px" height="500px" data-holder-rendered="true">
+			        <div class="carousel-caption d-none d-md-block">
+				          <h4>MV Agusta F4</h4>
+				          <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+			        </div>
+		      </div>
+		    </div>
+			    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+			      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			      <span class="sr-only">Previous</span>
+			    </a>
+
+			    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+			      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			      <span class="sr-only">Next</span>
+			    </a>
+	 	 </div>
+
+		
 
 
 
